--- a/frontend/public/locales/en/common.json
+++ b/frontend/public/locales/en/common.json
@@ -1,6 +1,7 @@
 {
   "unauthorized": "Unauthorized",
   "all": "All",
+  "start": "Start",
   "in_progress": "In Progress",
   "completed": "Completed",
   "home.title": "Welcome to CodinLab",
@@ -92,9 +93,8 @@
   "labs.question.output": "Output:",
   "labs.question.expected": "Expected:",
   "labs.question.hint": "Hint",
-  "dialog.title.password" : "Subscribe",
-  "dialog.content.password" : "Please enter your password to update your data.",
-  "dialog.button.submit" : "Submit",
-  "dialog.button.cancel" : "Cancel"
-
+  "dialog.title.password": "Subscribe",
+  "dialog.content.password": "Please enter your password to update your data.",
+  "dialog.button.submit": "Submit",
+  "dialog.button.cancel": "Cancel"
 }
