--- a/frontend/public/locales/tr/common.json
+++ b/frontend/public/locales/tr/common.json
@@ -97,5 +97,7 @@
   "dialog.content.password": "Verilerinizi güncellemek için lütfen şifrenizi giriniz.",
   "dialog.button.submit": "Onayla",
   "dialog.button.cancel": "İptal Et",
-  "logout": "Çıkış Yap"
+  "logout": "Çıkış Yap",
+  "languages.tr": "Türkçe",
+  "languages.en": "İngilizce"
 }
