Integration of User Lab Progress Statistics API endpoint complated.

--- a/frontend/public/locales/en/common.json
+++ b/frontend/public/locales/en/common.json
@@ -103,6 +103,8 @@
   "languages.en": "English",
   "labs.difficulty.easy": "Easy",
   "labs.difficulty.medium": "Medium",
-  "labs.difficulty.hard": "Hard"
+  "labs.difficulty.hard": "Hard",
+  "labs.progress.stats.progress": "In Progress",
+  "labs.progress.stats.completed": "Completed"
 
 }
