--- a/frontend/public/locales/tr/common.json
+++ b/frontend/public/locales/tr/common.json
@@ -35,7 +35,7 @@
   "login.password": "Parola",
   "login.remember.me": "Beni Hatırla",
   "login.forget.password": "Şifreni mi Unuttun?",
-  "login.login.button": "Giriş",
+  "login.login.button": "GİRİŞ",
   "login.divider.or": "ya da",
   "login.new.on.platform": "Platformumuzda yeni misiniz?",
   "login.create.new.account": "Hesap Oluştur",
@@ -105,7 +105,6 @@
   "labs.difficulty.easy": "Kolay",
   "labs.difficulty.medium": "Orta",
   "labs.difficulty.hard": "Zor",
-   "labs.progress.stats.progress": "Devam ediyor",
+  "labs.progress.stats.progress": "Devam ediyor",
   "labs.progress.stats.completed": "Tamamlandı"
-
 }
