--- a/frontend/public/locales/tr/common.json
+++ b/frontend/public/locales/tr/common.json
@@ -106,5 +106,8 @@
   "labs.difficulty.medium": "Orta",
   "labs.difficulty.hard": "Zor",
   "labs.progress.stats.progress": "Devam ediyor",
-  "labs.progress.stats.completed": "Tamamlandı"
+  "labs.progress.stats.completed": "Tamamlandı",
+  "userlist.action.name": "Aksiyon",
+  "userlist.edit.desc" :"Kullanıcı Düzenle",
+  "userlist.edit.content" :"Lütfen kullanıcı bilgilerini düzenleyin"
 }
