--- a/frontend/public/locales/en/common.json
+++ b/frontend/public/locales/en/common.json
@@ -108,7 +108,7 @@
   "labs.progress.stats.completed": "Completed",
   "userlist.action.name": "Action",
   "userlist.edit.desc" :"User Edit",
-  "userlist.edit.content" :"Lütfen düzenlemek istediğiniz kullanıcının yeni bilgilerini girin.",
+  "userlist.edit.content" :"Please enter the new information of the user you want to edit.",
   "roads.path.restart.button": "Restart the path",
   "codeEditor.output": "Output",
   "codeEditor.output.display": "Output will be displayed here"
