Login and home page buttons are fixed. Navbar tabs are organized according to i18n.

--- a/frontend/public/locales/tr/common.json
+++ b/frontend/public/locales/tr/common.json
@@ -4,6 +4,10 @@
   "start": "Başla",
   "in_progress": "Devam ediyor",
   "completed": "Tamamlandı",
+  "nav.home": "Anasayfa",
+  "nav.admin": "Yönetici",
+  "nav.roads": "Yol Haritaları",
+  "nav.labs": "Labaratuvarlar",
   "home.title": "CodinLab'a Hoşgeldiniz",
   "active_locale": "Türkçe",
   "home.content": "Farklı kodlama dillerinde ustalaşın, fikirlerinizi hayata geçirin ve geleneksel yöntemleri aşan eğlenceli ve etkileşimli bir öğrenme yolculuğunu deneyimleyin.",
@@ -110,8 +114,8 @@
   "labs.progress.stats.progress": "Devam ediyor",
   "labs.progress.stats.completed": "Tamamlandı",
   "userlist.action.name": "Aksiyon",
-  "userlist.edit.desc" :"Kullanıcı Düzenle",
-  "userlist.edit.content" :"Lütfen düzenlemek istediğiniz kullanıcının yeni bilgilerini girin.",
+  "userlist.edit.desc": "Kullanıcı Düzenle",
+  "userlist.edit.content": "Lütfen düzenlemek istediğiniz kullanıcının yeni bilgilerini girin.",
   "roads.path.restart.button": "Yolu baştan başlat",
   "codeEditor.output": "Çıktı",
   "codeEditor.output.display": "Çıktı burada görüntülenir"
