--- a/frontend/public/locales/en/common.json
+++ b/frontend/public/locales/en/common.json
@@ -4,6 +4,10 @@
   "start": "Start",
   "in_progress": "In Progress",
   "completed": "Completed",
+  "nav.home": "Home",
+  "nav.admin": "Admin",
+  "nav.roads": "Roads",
+  "nav.labs": "Labs",
   "home.title": "Welcome to CodinLab",
   "active_locale": "English",
   "home.content": "Master diverse coding languages, bring your ideas to life, and experience a fun and interactive learning journey that surpasses traditional methods.",
@@ -107,8 +111,8 @@
   "labs.progress.stats.progress": "In Progress",
   "labs.progress.stats.completed": "Completed",
   "userlist.action.name": "Action",
-  "userlist.edit.desc" :"User Edit",
-  "userlist.edit.content" :"Please enter the new information of the user you want to edit.",
+  "userlist.edit.desc": "User Edit",
+  "userlist.edit.content": "Please enter the new information of the user you want to edit.",
   "roads.path.restart.button": "Restart the path",
   "codeEditor.output": "Output",
   "codeEditor.output.display": "Output will be displayed here"
