start road connection

--- a/frontend/public/locales/en/common.json
+++ b/frontend/public/locales/en/common.json
@@ -30,6 +30,7 @@
   "labs.sort_the_labs": "Sort the labs",
   "roads.search.placeholder": "Search in roads",
   "roads.sort_the_labs": "Sort the roads",
+  "roads.path.start_road": "Start Road",
   "roads.path.next_path": "Next Path",
   "userlist.order.name": "Order",
   "userlist.username.name": "Username",
