--- a/frontend/public/locales/en/common.json
+++ b/frontend/public/locales/en/common.json
@@ -15,6 +15,7 @@
   "home.roads.content": "Lay the basics of programming (software) languages firmly and move step by step through the coding universe with Roads!",
   "home.labs.title": "Labs",
   "home.labs.content": "Improve your algorithm and programming skills, get practical experience and put your coding knowledge into practice with Labs!",
+  "home.advancement.title": "Advancement",
   "login.username": "Username",
   "login.password": "Password",
   "login.remember.me": "Remember Me",
