--- a/frontend/public/locales/tr/common.json
+++ b/frontend/public/locales/tr/common.json
@@ -15,6 +15,7 @@
   "home.roads.content": "Yazılım dillerinin temelini sağlam bir şekilde atın ve Yol haritası ile kodlama evreninde adım adım ilerleyin!",
   "home.labs.title": "Laboratuvarlar",
   "home.labs.content": "Laboratuvarlar ile algoritma ve programlama becerilerinizi geliştirin, pratik deneyim kazanın ve kodlama bilginizi uygulamaya geçirin!",
+  "home.advancement.title": "İlerleme",
   "roads.title": "Yol haritaları",
   "roads.content": "Yazılım dillerinin temelini sağlam bir şekilde atın ve Yol haritaları ile kodlama evreninde adım adım ilerleyin!",
   "register.name": "İsim",
