Development Card & CircularProgressStatistics Revised

--- a/frontend/public/locales/en/common.json
+++ b/frontend/public/locales/en/common.json
@@ -116,5 +116,9 @@
   "userlist.edit.content": "Please enter the new information of the user you want to edit.",
   "roads.path.restart.button": "Restart the path",
   "codeEditor.output": "Output",
-  "codeEditor.output.display": "Output will be displayed here"
+  "codeEditor.output.display": "Output will be displayed here",
+  "home.development.title": "Development",
+  "home.development.roads": "Roads",
+  "home.development.labs": "Labs"
+
 }
