--- a/frontend/public/locales/tr/common.json
+++ b/frontend/public/locales/tr/common.json
@@ -118,5 +118,8 @@
   "userlist.edit.content": "Lütfen düzenlemek istediğiniz kullanıcının yeni bilgilerini girin.",
   "roads.path.restart.button": "Yolu baştan başlat",
   "codeEditor.output": "Çıktı",
-  "codeEditor.output.display": "Çıktı burada görüntülenir"
+  "codeEditor.output.display": "Çıktı burada görüntülenir",
+  "home.development.title": "Geliştirme",
+  "home.development.roads": "Yol Haritaları",
+  "home.development.labs": "Labaratuvarlar"
 }
