add settings page

--- a/frontend/public/locales/en/common.json
+++ b/frontend/public/locales/en/common.json
@@ -123,6 +123,8 @@
   "home.development.labs": "Labs",
   "runCode" : "Code Running...",
   "succsesCode" : "Code Successfully Run",
-  "lab.button.review": "Review"
+  "lab.button.review": "Review",
+  "settings" : "Settings"
+
 
 }
