--- a/frontend/public/locales/en/common.json
+++ b/frontend/public/locales/en/common.json
@@ -124,7 +124,57 @@
   "runCode" : "Code Running...",
   "succsesCode" : "Code Successfully Run",
   "lab.button.review": "Review",
-  "settings" : "Settings"
+  "settings" : "Settings",
 
 
+  "ERR_INVALID_PROGRAMMING_ID": "Invalid programming ID provided.",
+  "ERR_INVALID_LAB_OR_PATH_ID": "Invalid lab or path ID provided.",
+  "ERR_INVALID_USER_ID": "Invalid user ID provided.",
+  "ERR_INVALID_LAB_ID": "Invalid lab ID provided.",
+  "ERR_INVALID_LOG_ID": "Invalid log ID provided.",
+  "ERR_INVALID_PATH_ID": "Invalid path ID provided.",
+  "ERR_INVALID_CREDENTIALS": "Invalid credentials.",
+  "ERR_INVALID_ROLE": "Invalid role provided.",
+  
+  "ERR_USERNAME_BEING_USED": "The username is already in use.",
+  "ERR_NEED_ROAD_START": "The road needs to be started.",
+  "ERR_SOLVE_PATH": "An error occurred while solving the path.",
+  
+  "ERR_NO_PERMISSION_DELETE": "You do not have permission to delete.",
+  
+  "ERR_USER_NOT_FOUND": "User not found.",
+  "ERR_MAINSH_NOT_FOUND": "Main road shell not found.",
+  "ERR_IMAGE_NOT_FOUND": "Docker image not found.",
+  "ERR_LAB_NOT_FOUND": "Lab not found.",
+  "ERR_PATH_NOT_FOUND": "Path not found.",
+  "ERR_PROGRAMMING_LANGUAGE_NOT_FOUND": "Programming language not found.",
+  "ERR_USERCODE_NOT_FOUND": "User code not found.",
+  "ERR_TEMPLATE_NOT_FOUND": "Template not found.",
+  "ERR_ROAD_NOT_FOUND": "Road not found.",
+  "ERR_SOLUTIONS_NOT_FOUND": "Solutions not found.",
+  "ERR_ACTIVITY_NOT_FOUND": "Activity not found.",
+  
+  "ERR_FILTERING_USERS": "Error occurred while filtering users.",
+  "ERR_FILTERING_LOGS": "Error occurred while filtering logs.",
+  "ERR_UPDATING_USER": "Error occurred while updating the user.",
+  "ERR_DELETING_USER": "Error occurred while deleting the user.",
+  "ERR_FETCHING_LOGS": "Error occurred while fetching logs.",
+  "ERR_FETCHING_LABS": "Error occurred while fetching labs.",
+  "ERR_FETCHING_ROADS": "Error occurred while fetching roads.",
+  "ERR_FETCHING_LEVELS": "Error occurred while fetching levels.",
+  "ERR_FETCHING_TEMPLATE": "Error occurred while fetching the frontend template.",
+  "ERR_FETCHING_PROGRAMMING_LANGUAGES": "Error occurred while fetching programming languages.",
+  "ERR_COMPARING_PASSWORDS": "Error occurred while comparing passwords.",
+  "ERR_ADDING_USER": "Error occurred while adding the user.",
+  "ERR_ADDING_LOG": "Error occurred while adding the log.",
+  
+  "ERR_DOCKER_IMAGE": "Docker image error.",
+  "ERR_DOCKER_CONTAINER_STOP": "Error occurred while stopping the Docker container.",
+  "ERR_DOCKER_LOGS": "Error occurred while fetching Docker logs.",
+  "ERR_DOCKER_FILES": "Error occurred with Docker files.",
+  "ERR_DOCKER_COULD_NOT_CREATE_FILE": "Could not create Docker file.",
+  
+  "ERR_PARSER_SERVICE": "Parser service error.",
+  "INTERNAL_SERVER_ERROR": "Internal server error",
+  "VALIDATION_ERROR": "Validation Error"
 }
