--- a/frontend/public/locales/tr/common.json
+++ b/frontend/public/locales/tr/common.json
@@ -126,5 +126,59 @@
    "runCode" : "Kod Çalıştırılıyor...",
   "succsesCode" : "Kod Başarıyla Çalıştırıldı",
    "lab.button.review": "İncele",
-   "settings" : "Ayarlar"
+   "settings" : "Ayarlar",
+
+
+
+   "ERR_INVALID_PROGRAMMING_ID": "Geçersiz programlama kimliği.",
+   "ERR_INVALID_LAB_OR_PATH_ID": "Geçersiz laboratuvar veya yol kimliği.",
+   "ERR_INVALID_USER_ID": "Geçersiz kullanıcı kimliği.",
+   "ERR_INVALID_LAB_ID": "Geçersiz laboratuvar kimliği.",
+   "ERR_INVALID_LOG_ID": "Geçersiz log kimliği.",
+   "ERR_INVALID_PATH_ID": "Geçersiz yol kimliği.",
+   "ERR_INVALID_CREDENTIALS": "Geçersiz kimlik bilgileri.",
+   "ERR_INVALID_ROLE": "Geçersiz rol.",
+   
+   "ERR_USERNAME_BEING_USED": "Kullanıcı adı zaten kullanılıyor.",
+   "ERR_NEED_ROAD_START": "Yolun başlatılması gerekiyor.",
+   "ERR_SOLVE_PATH": "Yol çözülürken bir hata oluştu.",
+   
+   "ERR_NO_PERMISSION_DELETE": "Silme izniniz yok.",
+   
+   "ERR_USER_NOT_FOUND": "Kullanıcı bulunamadı.",
+   "ERR_MAINSH_NOT_FOUND": "Ana yol kabuğu bulunamadı.",
+   "ERR_IMAGE_NOT_FOUND": "Docker imajı bulunamadı.",
+   "ERR_LAB_NOT_FOUND": "Laboratuvar bulunamadı.",
+   "ERR_PATH_NOT_FOUND": "Yol bulunamadı.",
+   "ERR_PROGRAMMING_LANGUAGE_NOT_FOUND": "Programlama dili bulunamadı.",
+   "ERR_USERCODE_NOT_FOUND": "Kullanıcı kodu bulunamadı.",
+   "ERR_TEMPLATE_NOT_FOUND": "Şablon bulunamadı.",
+   "ERR_ROAD_NOT_FOUND": "Yol bulunamadı.",
+   "ERR_SOLUTIONS_NOT_FOUND": "Çözümler bulunamadı.",
+   "ERR_ACTIVITY_NOT_FOUND": "Aktivite bulunamadı.",
+   
+   "ERR_FILTERING_USERS": "Kullanıcılar filtrelenirken bir hata oluştu.",
+   "ERR_FILTERING_LOGS": "Loglar filtrelenirken bir hata oluştu.",
+   "ERR_UPDATING_USER": "Kullanıcı güncellenirken bir hata oluştu.",
+   "ERR_DELETING_USER": "Kullanıcı silinirken bir hata oluştu.",
+   "ERR_FETCHING_LOGS": "Loglar getirilirken bir hata oluştu.",
+   "ERR_FETCHING_LABS": "Laboratuvarlar getirilirken bir hata oluştu.",
+   "ERR_FETCHING_ROADS": "Yollar getirilirken bir hata oluştu.",
+   "ERR_FETCHING_LEVELS": "Seviyeler getirilirken bir hata oluştu.",
+   "ERR_FETCHING_TEMPLATE": "Ön uç şablonu getirilirken bir hata oluştu.",
+   "ERR_FETCHING_PROGRAMMING_LANGUAGES": "Programlama dilleri getirilirken bir hata oluştu.",
+   "ERR_COMPARING_PASSWORDS": "Şifreler karşılaştırılırken bir hata oluştu.",
+   "ERR_ADDING_USER": "Kullanıcı eklenirken bir hata oluştu.",
+   "ERR_ADDING_LOG": "Log eklenirken bir hata oluştu.",
+   
+   "ERR_DOCKER_IMAGE": "Docker imaj hatası.",
+   "ERR_DOCKER_CONTAINER_STOP": "Docker konteyneri durdurulurken bir hata oluştu.",
+   "ERR_DOCKER_LOGS": "Docker logları getirilirken bir hata oluştu.",
+   "ERR_DOCKER_FILES": "Docker dosyalarında bir hata oluştu.",
+   "ERR_DOCKER_COULD_NOT_CREATE_FILE": "Docker dosyası oluşturulamadı.",
+   
+   "ERR_PARSER_SERVICE": "Parser servis hatası.",
+
+   "INTERNAL_SERVER_ERROR": "İç Sunucu Hatası",
+   "VALIDATION_ERROR": "Doğrulama Hatası"
 }
