--- a/frontend/public/locales/en/common.json
+++ b/frontend/public/locales/en/common.json
@@ -128,6 +128,8 @@
   "admin.users.sort.filter": "Sort Users",
   "code.image.downloading": "$$$$ is downloading.",
   "code.image.downloaded": "The $$$$ image downloaded successfully",
+  "admin": "Admin",
+  "users": "Users",
 
   "ERR_INVALID_PROGRAMMING_ID": "Invalid programming ID provided.",
   "ERR_INVALID_LAB_OR_PATH_ID": "Invalid lab or path ID provided.",
