README.md file, backend session config and frontend auth functions have been updated

--- a/frontend/public/locales/en/common.json
+++ b/frontend/public/locales/en/common.json
@@ -10,7 +10,7 @@
   "nav.labs": "Labs",
   "home.title": "Welcome to CodinLab",
   "active_locale": "English",
-  "home.content": "Master diverse coding languages, bring your ideas to life, and experience a fun and interactive learning journey that surpasses traditional methods.",
+  "home.content": "Improve your skills on programming languages, experience a fun and interactive learning journey that beyond the traditional methods.",
   "home.roads.title": "Roads",
   "home.roads.content": "Lay the basics of programming (software) languages firmly and move step by step through the coding universe with Roads!",
   "home.labs.title": "Labs",
