--- a/frontend/public/locales/tr/common.json
+++ b/frontend/public/locales/tr/common.json
@@ -4,11 +4,11 @@
   "start": "Başla",
   "in_progress": "Devam ediyor",
   "completed": "Tamamlandı",
-  "nav.home": "Anasayfa",
+  "nav.home": "Ana sayfa",
   "nav.admin": "Yönetici",
   "nav.roads": "Yol Haritaları",
-  "nav.labs": "Labaratuvarlar",
-  "home.title": "CodinLab'a Hoşgeldiniz",
+  "nav.labs": "Laboratuvarlar",
+  "home.title": "CodinLab'e Hoş geldiniz!",
   "active_locale": "Türkçe",
   "home.content": "Farklı kodlama dillerinde ustalaşın, fikirlerinizi hayata geçirin ve geleneksel yöntemleri aşan eğlenceli ve etkileşimli bir öğrenme yolculuğunu deneyimleyin.",
   "home.roads.title": "Yol Haritası",
@@ -18,8 +18,8 @@
   "home.advancement.title": "İlerleme",
   "roads.title": "Yol haritaları",
   "roads.content": "Yazılım dillerinin temelini sağlam bir şekilde atın ve Yol haritaları ile kodlama evreninde adım adım ilerleyin!",
-  "register.name": "İsim",
-  "register.surname": "Soyisim",
+  "register.name": "Ad",
+  "register.surname": "Soyad",
   "register.username": "Kullanıcı adı",
   "register.githubProfile": "Github kullanıcı adı",
   "register.githubProfileError": "Github kullanıcı adı gereklidir",
@@ -31,7 +31,7 @@
   "register.already": "Zaten hesabın var mı?",
   "register.login": "Giriş yap",
   "register.nameError": "Ad gerekli",
-  "register.surnameError": "Soy adı gerekli",
+  "register.surnameError": "Soyadı gerekli",
   "register.usernameError": "Kullanıcı adı gerekli",
   "register.emailError": "Geçersiz e-posta",
   "register.emailRequiredError": "E-posta gerekli",
@@ -65,8 +65,8 @@
   "admin.center.title": "Yönetim Merkezi",
   "admin.language.rates": "Yazılım Dillerinin İlerleme Oranları",
   "settings.page.title": "Ayarlar",
-  "settings.change.button": "Değisiklikleri Kaydet",
-  "settings.password.button": "Sifreyi Değistir",
+  "settings.change.button": "Değişiklikleri Kaydet",
+  "settings.password.button": "Şifreyi Değiştir",
   "settings.change.username": "Kullanıcı Adı",
   "settings.change.github": "Github Kullanıcı Adı",
   "settings.old.password": "Mevcut Şifre",
@@ -122,7 +122,7 @@
   "codeEditor.output.display": "Çıktı burada görüntülenir",
   "home.development.title": "Geliştirme",
   "home.development.roads": "Yol Haritaları",
-  "home.development.labs": "Labaratuvarlar",
+  "home.development.labs": "Laboratuvarlar",
   "runCode": "Kod Çalıştırılıyor...",
   "succsesCode": "Kod Başarıyla Çalıştırıldı",
   "lab.button.review": "İncele",
