--- a/frontend/public/locales/en/common.json
+++ b/frontend/public/locales/en/common.json
@@ -10,9 +10,9 @@
   "nav.labs": "Labs",
   "home.title": "Welcome to CodinLab",
   "active_locale": "English",
-  "home.content": "Improve your skills on programming languages, experience a fun and interactive learning journey that beyond the traditional methods.",
+  "home.content": "Improve your skills on various programming languages, experience a fun and interactive learning journey that goes beyond the traditional methods.",
   "home.roads.title": "Roads",
-  "home.roads.content": "Lay the basics of programming (software) languages firmly and move step by step through the coding universe with Roads!",
+  "home.roads.content": "Lay the fundamentals of programming languages firmly and move step by step through the coding universe with Roads!",
   "home.labs.title": "Labs",
   "home.labs.content": "Improve your algorithm and programming skills, get practical experience and put your coding knowledge into practice with Labs!",
   "home.advancement.title": "Advancement",
@@ -40,7 +40,7 @@
   "users.search.placeholder": "Search in users",
   "users.sort_the_labs": "Sort the users",
   "admin.time.title": "Time Spent & Languages",
-  "admin.time.content": "This graph shows how much time is spent in which software languages on a weekly basis.",
+  "admin.time.content": "This graph shows how much time is spent on each software language on a weekly basis.",
   "admin.graphic.hours": "hours",
   "admin.activity.title": "Activity Calendar",
   "admin.activity.content": "Activities are measured by the completion of roads and labs.",
@@ -101,7 +101,7 @@
   "labs.question.expected": "Expected:",
   "labs.question.hint": "Hint",
   "dialog.title.password": "Subscribe",
-  "dialog.content.password": "Please enter your password to update your data.",
+  "dialog.content.password": "Please enter your password to update your informations.",
   "dialog.button.submit": "Submit",
   "dialog.button.cancel": "Cancel",
   "logout": "Logout",
@@ -122,7 +122,7 @@
   "home.development.roads": "Roads",
   "home.development.labs": "Labs",
   "runCode": "Code Running...",
-  "succsesCode": "Code Successfully Run",
+  "succsesCode": "Code Run Successfully",
   "lab.button.review": "Review",
   "settings": "Settings",
   "admin.users.sort.filter": "Sort Users",
