--- a/frontend/public/locales/tr/common.json
+++ b/frontend/public/locales/tr/common.json
@@ -103,7 +103,7 @@
   "labs.question.hint": "İpucu",
   "roads.path.start_road": "Yola Başla",
   "dialog.title.password": "Onayla",
-  "dialog.content.password": "Verilerinizi güncellemek için lütfen şifrenizi giriniz.",
+  "dialog.content.password": "Bilgilerinizi güncellemek için lütfen şifrenizi giriniz.",
   "dialog.button.submit": "Onayla",
   "dialog.button.cancel": "İptal Et",
   "logout": "Çıkış Yap",
