--- a/frontend/public/locales/tr/common.json
+++ b/frontend/public/locales/tr/common.json
@@ -118,6 +118,7 @@
   "userlist.edit.desc": "Kullanıcı Düzenle",
   "userlist.edit.content": "Lütfen düzenlemek istediğiniz kullanıcının yeni bilgilerini girin.",
   "roads.path.restart.button": "Yolu baştan başlat",
+  "roads.lab.restart.button": "Labı baştan başlat",
   "codeEditor.output": "Çıktı",
   "codeEditor.output.display": "Çıktı burada görüntülenir",
   "home.development.title": "Geliştirme",
