--- a/frontend/public/locales/en/common.json
+++ b/frontend/public/locales/en/common.json
@@ -117,6 +117,7 @@
   "userlist.edit.content": "Please enter the new information of the user you want to edit.",
   "roads.path.restart.button": "Restart the path",
   "roads.lab.restart.button": "Restart the lab",
+  "roads.path.no_next_path": "You have completed the last path of this road!",
   "codeEditor.output": "Output",
   "codeEditor.output.display": "Output will be displayed here",
   "home.development.title": "Development",
