--- a/frontend/public/locales/en/common.json
+++ b/frontend/public/locales/en/common.json
@@ -8,6 +8,7 @@
   "nav.admin": "Admin",
   "nav.roads": "Roads",
   "nav.labs": "Labs",
+  "footer.copyright": "Yavuzlar Web Security & Software Development Team",
   "home.title": "Welcome to CodinLab",
   "active_locale": "English",
   "home.content": "Improve your skills on various programming languages, experience a fun and interactive learning journey that goes beyond the traditional methods.",
