--- a/frontend/public/locales/tr/common.json
+++ b/frontend/public/locales/tr/common.json
@@ -8,6 +8,7 @@
   "nav.admin": "Yönetici",
   "nav.roads": "Yol Haritaları",
   "nav.labs": "Laboratuvarlar",
+  "footer.copyright": "Yavuzlar Web Güvenliği ve Yazılım Takımı",
   "home.title": "CodinLab'e Hoş geldiniz!",
   "active_locale": "Türkçe",
   "home.content": "Farklı kodlama dillerinde ustalaşın, fikirlerinizi hayata geçirin ve geleneksel yöntemleri aşan eğlenceli ve etkileşimli bir öğrenme yolculuğunu deneyimleyin.",
